# super-palm-tree

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.py  pixi.toml  pyproject.toml  tree.rs  yer.txt  yuh.mojo  yuzz.txt
.github/workflows/: codeql-palm-tree.yml  codeql.yml
c/: spaghetti.c  spinner1.c  spinner2.c
cpp/include/: abi.h
cpp/src/: abi.cpp
fortran/: area.f90  hello.f90  matrix.f90
freebsd/: Makefile  freebsd-pylock.toml  kmod.c  pylock.toml
lnos-arch/: Dockerfile  run-iso.sh
mojo/: abi_test.mojo  base.mojo  sklearn.mojo  sklearn_nightly.mojo  test_nightly.mojo
nushell/: test.nu  test.txt
nvidia/cuda/: gpu_test.cu
pixi/install/: install.ps1  install.sh
python/: cv_base.py
python/bindings/: pyabi.py
rust/: etl.rs  raii.rs  test.rs
test/: CMakeLists.txt  test.txt  yawp.cpp  yee.c  yeh.txt
zig/: test.zig
