[build-system]
requires = ["setuptools>=70.0.1", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/rcghpge/super-palm-tree"
Repository = "https://github.com/rcghpge/super-palm-tree"

[project]
name = "super-palm-tree"
version = "0.2.0"
description = "Building and testing software."
license = "MIT"
authors = [
  { name = "Robert Cocker" },
  { email = "rcocker87@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.4.1",
  "pandas>=2.3.3",
  "matplotlib>=3.10.8",
  "xgboost>=3.1.3",
  "scikit-learn>=1.8.0",
  "keras>=3.13.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "bandit>=1.9.2", 
  "pip-audit>=2.10.0",
  "pip-tools>=7.5.2"
]
